--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,13 +9,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.NoActionBar">
-        <activity android:name="com.example.languide.ui.student.ChooseDifficultyActivity" />
-        <activity android:name="com.example.languide.ui.student.ChooseTestActivity" />
-        <activity android:name="com.example.languide.ui.student.ProfileActivity" />
-        <activity android:name="com.example.languide.ui.student.StudentMainActivity" />
-        <activity android:name="com.example.languide.ui.register.RegisterActivity" />
+        <activity android:name=".ui.student.ShowPrevResultsActivity"></activity>
+        <activity android:name=".ui.student.ChooseDifficultyActivity" />
+        <activity android:name=".ui.student.ChooseTestActivity" />
+        <activity android:name=".ui.student.ProfileActivity" />
+        <activity android:name=".ui.student.StudentMainActivity" />
+        <activity android:name=".ui.register.RegisterActivity" />
         <activity
-            android:name="com.example.languide.ui.login.LoginActivity"
+            android:name=".ui.login.LoginActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
