--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.languide">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,7 +11,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.NoActionBar">
-        <activity android:name=".ui.student.TestActivity" />
+        <activity android:name=".ui.student.testActivities.WritingTestActivity" />
+        <activity android:name=".ui.student.testActivities.SpeakingTestActivity" />
+        <activity android:name=".ui.student.testActivities.VocabularyTestActivity" />
+        <activity android:name=".ui.student.testActivities.ListeningTestActivity" />
+        <activity android:name=".ui.student.testActivities.ReadingTestActivity" />
         <activity android:name=".ui.student.ShowPrevResultsActivity" />
         <activity android:name=".ui.student.ChooseDifficultyActivity" />
         <activity android:name=".ui.student.ChooseTestActivity" />
