--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:theme="@style/Theme.AppCompat.NoActionBar"
         android:usesCleartextTraffic="true"
         tools:targetApi="m">
-        <activity android:name=".ui.student.TestResultActivity"></activity>
+        <activity android:name=".ui.student.TestResultActivity" />
         <activity android:name=".ui.student.testActivities.WritingTestActivity" />
         <activity android:name=".ui.student.testActivities.SpeakingTestActivity" />
         <activity android:name=".ui.student.testActivities.VocabularyTestActivity" />
