--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,9 +4,11 @@
     package="com.example.languide">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
-        android:allowBackup="true"
+        android:requestLegacyExternalStorage="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
@@ -14,7 +16,7 @@
         android:theme="@style/Theme.AppCompat.NoActionBar"
         android:usesCleartextTraffic="true"
         tools:targetApi="m">
-        <activity android:name=".ui.student.showPrevTests.ShowSpeakingTestActivity"></activity>
+        <activity android:name=".ui.student.showPrevTests.ShowSpeakingTestActivity" />
         <activity android:name=".ui.student.showPrevTests.ShowWritingTestActivity" />
         <activity android:name=".ui.student.showPrevTests.ShowVocabularyTestActivity" />
         <activity android:name=".ui.student.showPrevTests.ShowListeningTestActivity" />
